# tessera

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Directory.Build.props  Directory.Packages.props  Dockerfile  LICENSE  README.md  README.python-spike.md  SECURITY.md  Tessera.slnx  architrave.config.json  compose.dev.yaml  grants.example.toml  uikit.config.json
.dev/: grants.json.example  tessera.json.example
.github/workflows/: ci.yml  (+2 more)
docs/: adoption-and-portability.md  adversarial-p2.md  architecture.md  connect-a-domain-mcp.md  getting-started.md  onboarding-with-authentik.md  positioning.md  roadmap.md  roadmap.python-spike.md
gates/: backend-checks.ps1  backend-checks.sh  checks.ps1  checks.sh  quality-gate.ps1  quality-gate.sh  reconcile.ps1  reconcile.sh  rubric.md
harness/: init-run.ps1  init-run.sh  semantic-review.ps1  semantic-review.sh  validate-run.ps1  validate-run.sh
knowledge/: apple.md  backend.md  design-tokens.md  learning-loop.md  microsoft.md  web.md  yagni.md
scripts/: check-pii.sh
spike/: README.md  ci.yml.python-spike  docker-compose.example.yml  pyproject.toml  tessera.example.toml
spike/src/tessera/: __main__.py  broker.py  policy.py  resolver.py  serve.py
spike/tests/: test_model.py  test_policy.py  test_resolver.py
tests/: Directory.Build.props  test_broker.py  test_config.py  test_serve.py  test_store.py
web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+342 files in other folders)
