[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.0.2"
description = "Secretless, identity-aware credential broker for agents & automations (non-human identities)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Dragoș Hont" }]
# The runtime is intentionally dependency-free (Python stdlib only) so the image
# stays tiny and the credential-handling surface is small and auditable. This is
# the same discipline as the `sessionkeeper` harvester it builds on.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
tessera = "tessera.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
